--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "techwithtimreact",
   "version": "0.1.0",
-  "homepage": "ricecooker312.github.io/inventory-management",
+  "homepage": "https://ricecooker312.github.io/inventory-management",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
